--- a/app/src/main/res/layout/activity_editar_lugar.xml
+++ b/app/src/main/res/layout/activity_editar_lugar.xml
@@ -142,7 +142,7 @@
                     android:layout_marginBottom="5dp"
                     android:layout_marginTop="5dp"
                     android:layout_weight="1"
-                    android:text="Actividad:"
+                    android:text="@string/label_descripcion"
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="@dimen/size_text_primary" />
 
@@ -153,7 +153,42 @@
                     android:layout_marginBottom="@dimen/margin_label_top_bottom"
                     android:layout_marginTop="@dimen/margin_label_top_bottom"
                     android:layout_weight="2"
-                    android:inputType="text"
+                    android:gravity="top|left"
+                    android:lines="8"
+                    android:inputType="textMultiLine"
+                    android:textSize="@dimen/size_text_primary"
+                    tools:ignore="RtlHardcoded"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/editar_layout_actividad"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal"
+                android:weightSum="3">
+
+                <TextView
+                    android:id="@+id/editar_label_actividad"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_weight="1"
+                    android:text="@string/label_actividad"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="@dimen/size_text_primary" />
+
+                <EditText
+                    android:id="@+id/editar_txt_actividad"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/margin_label_top_bottom"
+                    android:layout_marginTop="@dimen/margin_label_top_bottom"
+                    android:layout_weight="2"
+                    android:lines="8"
+                    android:gravity="top|left"
+                    android:inputType="textMultiLine"
                     android:textSize="@dimen/size_text_primary" />
             </LinearLayout>
 
