--- a/app/src/main/res/layout/activity_descripcion_restaurante.xml
+++ b/app/src/main/res/layout/activity_descripcion_restaurante.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.hga.appturismo.activity.DescripcionRestauranteActivity">
+                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                 xmlns:tools="http://schemas.android.com/tools"
+                                                 android:layout_width="match_parent"
+                                                 android:layout_height="match_parent"
+                                                 tools:context="com.hga.appturismo.activity.DescripcionRestauranteActivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -17,6 +17,7 @@
             android:orientation="vertical">
 
             <LinearLayout
+                android:id="@+id/descripcion_layout_nombre"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
@@ -36,24 +37,28 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.5"
+                    android:text=""
                     android:textColor="@color/colorAccent"
-                    android:textStyle="bold"
-                    android:text="" />
+                    android:textStyle="bold"/>
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/descripcion_layout_imagen"
                 android:layout_width="match_parent"
                 android:layout_height="220dp">
+
                 <android.support.v4.view.ViewPager
                     android:id="@+id/imagenTurismo"
                     android:layout_width="match_parent"
                     android:layout_height="220dp"
-                    android:scaleType="matrix"
-                    android:padding="0dp"
                     android:layout_margin="0dp"
-                    app:layout_collapseMode="parallax" />
+                    android:padding="0dp"
+                    android:scaleType="matrix"
+                    app:layout_collapseMode="parallax"/>
             </LinearLayout>
+
             <LinearLayout
+                android:id="@+id/descripcion_layout_descripcion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
@@ -67,11 +72,12 @@
                     android:textStyle="bold"/>
 
                 <TextView
-                    android:id="@+id/textViewDescripcionText"
+                    android:id="@+id/textViewActividadTextView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="" />
+                    android:text=""/>
             </LinearLayout>
+
             <LinearLayout
                 android:id="@+id/linearLayoutLinea"
                 android:layout_width="match_parent"
@@ -84,15 +90,17 @@
                     android:layout_height="wrap_content"
                     android:text="Linea: "
                     android:textColor="@color/colorPrimaryDark"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:id="@+id/textViewLineaText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="" />
+                    android:text=""/>
             </LinearLayout>
+
             <LinearLayout
+                android:id="@+id/descripcion_layout_direccion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
@@ -109,10 +117,11 @@
                     android:id="@+id/textViewDireccionText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="" />
+                    android:text=""/>
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/descripcion_layout_horarios"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
@@ -123,7 +132,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/label_horarios"
                     android:textColor="@color/colorPrimaryDark"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:id="@+id/textViewHorariosTextRestaurante"
@@ -132,6 +141,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/descripcion_layout_telefono"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
@@ -142,13 +152,13 @@
                     android:layout_height="wrap_content"
                     android:text="Teléfono: "
                     android:textColor="@color/colorPrimaryDark"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:id="@+id/textViewTelefonoText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="" />
+                    android:text=""/>
             </LinearLayout>
 
             <LinearLayout
@@ -163,13 +173,13 @@
                     android:layout_height="wrap_content"
                     android:text="Página Web: "
                     android:textColor="@color/colorPrimaryDark"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:id="@+id/textViewPagWebText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="" />
+                    android:text=""/>
             </LinearLayout>
 
             <LinearLayout
@@ -184,13 +194,13 @@
                     android:layout_height="wrap_content"
                     android:text="Email: "
                     android:textColor="@color/colorPrimaryDark"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:id="@+id/textViewEmailText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="" />
+                    android:text=""/>
             </LinearLayout>
 
             <LinearLayout
@@ -212,7 +222,7 @@
                     android:id="@+id/textViewRegistradoPorText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="" />
+                    android:text=""/>
             </LinearLayout>
 
             <include layout="@layout/content_button_description"/>
