--- a/app/src/main/res/layout/activity_descripcion_turistico.xml
+++ b/app/src/main/res/layout/activity_descripcion_turistico.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,6 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:paddingTop="8dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <ScrollView
@@ -87,7 +91,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.5"
-                        android:text="" />
+                        android:text=""/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -101,7 +105,7 @@
                         android:padding="0dp"
                         android:scaleType="fitXY"
 
-                        app:layout_collapseMode="parallax" />
+                        app:layout_collapseMode="parallax"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -113,15 +117,36 @@
                         android:id="@+id/textViewDescripcion"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Descripción: "
+                        android:text="@string/label_descripcion"
                         android:textColor="@color/colorPrimaryDark"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"/>
 
                     <TextView
-                        android:id="@+id/textViewDescripcionText"
+                        android:id="@+id/textViewDescripcionTextView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="" />
+                        android:text=""/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/linearLayoutActividad"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/textViewActividad"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/label_actividad"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textStyle="bold"/>
+
+                    <TextView
+                        android:id="@+id/textViewActividadTextView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text=""/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -136,13 +161,13 @@
                         android:layout_height="wrap_content"
                         android:text="Linea: "
                         android:textColor="@color/colorPrimaryDark"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"/>
 
                     <TextView
                         android:id="@+id/textViewLineaText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="" />
+                        android:text=""/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -157,13 +182,13 @@
                         android:layout_height="wrap_content"
                         android:text="Fecha: "
                         android:textColor="@color/colorPrimaryDark"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"/>
 
                     <TextView
                         android:id="@+id/textViewFechaText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="" />
+                        android:text=""/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -177,13 +202,13 @@
                         android:layout_height="wrap_content"
                         android:text="@string/text_direccion"
                         android:textColor="@color/colorPrimaryDark"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"/>
 
                     <TextView
                         android:id="@+id/textViewDireccionText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="" />
+                        android:text=""/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -198,13 +223,13 @@
                         android:layout_height="wrap_content"
                         android:text="Teléfono: "
                         android:textColor="@color/colorPrimaryDark"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"/>
 
                     <TextView
                         android:id="@+id/textViewTelefonoText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="" />
+                        android:text=""/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -219,35 +244,15 @@
                         android:layout_height="wrap_content"
                         android:text="Horarios de atención: "
                         android:textColor="@color/colorPrimaryDark"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"/>
 
                     <TextView
                         android:id="@+id/textViewHorariosTextLugar"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="" />
+                        android:text=""/>
                 </LinearLayout>
 
-                <LinearLayout
-                    android:id="@+id/linearLayoutActividad"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/textViewActividad"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Actividades:"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:textStyle="bold"/>
-
-                    <TextView
-                        android:id="@+id/textViewActividadText"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="" />
-                </LinearLayout>
                 <LinearLayout
                     android:id="@+id/linearLayoutRegistradoPor"
                     android:layout_width="match_parent"
@@ -267,8 +272,9 @@
                         android:id="@+id/textViewRegistradoPorText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="" />
+                        android:text=""/>
                 </LinearLayout>
+
                 <include layout="@layout/content_button_description"/>
             </LinearLayout>
         </ScrollView>
