--- a/app/src/main/res/layout/activity_insertar_lugar.xml
+++ b/app/src/main/res/layout/activity_insertar_lugar.xml
@@ -142,24 +142,58 @@
                 android:weightSum="3">
 
                 <TextView
-                    android:id="@+id/label_descripcion"
+                    android:id="@+id/id_label_descripcion"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
                     android:layout_marginTop="5dp"
                     android:layout_weight="1"
-                    android:text="Descripción:"
+                    android:text="@string/label_descripcion"
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="@dimen/size_text_primary"/>
 
                 <EditText
-                    android:id="@+id/txt_descripcion"
+                    android:id="@+id/txt_descripcion_insertar"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/margin_label_top_bottom"
                     android:layout_marginTop="@dimen/margin_label_top_bottom"
                     android:layout_weight="2"
-                    android:inputType="text"
+                    android:gravity="top|left"
+                    android:lines="8"
+                    android:inputType="textMultiLine"
+                    android:textSize="@dimen/size_text_primary"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/layout_actividad"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal"
+                android:weightSum="3">
+
+                <TextView
+                    android:id="@+id/id_label_actividad"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_weight="1"
+                    android:text="@string/label_actividad"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="@dimen/size_text_primary"/>
+
+                <EditText
+                    android:id="@+id/txt_actividad_insertar"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/margin_label_top_bottom"
+                    android:layout_marginTop="@dimen/margin_label_top_bottom"
+                    android:layout_weight="2"
+                    android:gravity="top|left"
+                    android:lines="8"
+                    android:inputType="textMultiLine"
                     android:textSize="@dimen/size_text_primary"/>
             </LinearLayout>
 
