--- a/app/src/main/res/layout/activity_editar_lugar.xml
+++ b/app/src/main/res/layout/activity_editar_lugar.xml
@@ -241,14 +241,14 @@
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="@dimen/size_text_primary" />
 
-                <EditText
+                <TextView
                     android:id="@+id/editar_txt_fecha"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/margin_label_top_bottom"
                     android:layout_marginTop="@dimen/margin_label_top_bottom"
                     android:layout_weight="2"
-                    android:inputType="text"
+                    android:onClick="showDatePickerDialog"
                     android:textSize="@dimen/size_text_primary" />
             </LinearLayout>
 
