--- a/app/src/main/res/layout/activity_insertar_lugar.xml
+++ b/app/src/main/res/layout/activity_insertar_lugar.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                 xmlns:tools="http://schemas.android.com/tools"
-                                                 android:layout_width="match_parent"
-                                                 android:layout_height="match_parent"
-                                                 tools:context="com.hga.appturismo.activity.InsertarLugarActivity">
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.hga.appturismo.activity.InsertarLugarActivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -160,8 +161,8 @@
                     android:layout_marginTop="@dimen/margin_label_top_bottom"
                     android:layout_weight="2"
                     android:gravity="top|left"
-                    android:lines="5"
                     android:inputType="textMultiLine"
+                    android:lines="5"
                     android:textSize="@dimen/size_text_primary"/>
             </LinearLayout>
 
@@ -192,8 +193,8 @@
                     android:layout_marginTop="@dimen/margin_label_top_bottom"
                     android:layout_weight="2"
                     android:gravity="top|left"
-                    android:lines="5"
                     android:inputType="textMultiLine"
+                    android:lines="5"
                     android:textSize="@dimen/size_text_primary"/>
             </LinearLayout>
 
@@ -242,14 +243,14 @@
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="@dimen/size_text_primary"/>
 
-                <EditText
+                <TextView
                     android:id="@+id/txt_fecha"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/margin_label_top_bottom"
                     android:layout_marginTop="@dimen/margin_label_top_bottom"
                     android:layout_weight="2"
-                    android:inputType="text"
+                    android:onClick="showDatePickerDialog"
                     android:textSize="@dimen/size_text_primary"/>
 
             </LinearLayout>
