--- a/app/src/main/res/layout/activity_insertar_lugar.xml
+++ b/app/src/main/res/layout/activity_insertar_lugar.xml
@@ -101,7 +101,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
-                    android:text="@array/tipo_turismo"
+                    android:text="@array/subtipo_turismo"
                     android:textSize="@dimen/size_text_primary"/>
             </LinearLayout>
 
