--- a/app/src/main/res/layout/activity_insertar_lugar.xml
+++ b/app/src/main/res/layout/activity_insertar_lugar.xml
@@ -430,7 +430,7 @@
                     android:layout_marginBottom="@dimen/margin_label_top_bottom"
                     android:layout_marginTop="@dimen/margin_label_top_bottom"
                     android:layout_weight="2"
-                    android:inputType="text"
+                    android:inputType="numberDecimal"
                     android:textSize="@dimen/size_text_primary"/>
             </LinearLayout>
 
@@ -460,7 +460,7 @@
                     android:layout_marginBottom="@dimen/margin_label_top_bottom"
                     android:layout_marginTop="@dimen/margin_label_top_bottom"
                     android:layout_weight="2"
-                    android:inputType="text"
+                    android:inputType="numberDecimal"
                     android:textSize="@dimen/size_text_primary"/>
             </LinearLayout>
 
