--- a/app/src/main/res/layout/activity_editar_lugar.xml
+++ b/app/src/main/res/layout/activity_editar_lugar.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -46,32 +47,6 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/editar_layout_provincia"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:orientation="horizontal"
-                android:weightSum="3">
-
-                <TextView
-                    android:id="@+id/editar_label_textView_provincia"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/label_provincia"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textSize="@dimen/size_text_primary" />
-
-                <Spinner
-                    android:id="@+id/editar_spinner_provincia"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:text="@array/provincia"
-                    android:textSize="@dimen/size_text_primary" />
-            </LinearLayout>
-
-            <LinearLayout
                 android:id="@+id/editar_layout_subtipo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -98,6 +73,37 @@
                     android:text="@array/subtipo_turismo"
                     android:textSize="@dimen/size_text_primary" />
             </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/editar_layout_provincia"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal"
+                android:weightSum="3">
+
+                <TextView
+                    android:id="@+id/editar_label_textView_provincia"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/label_provincia"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="@dimen/size_text_primary" />
+
+                <Spinner
+                    android:id="@+id/editar_spinner_provincia"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:text="@array/provincia"
+                    android:textSize="@dimen/size_text_primary" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@android:color/black"/>
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/editar_layout_nombre"
