--- a/app/src/main/res/layout/activity_descripcion_sugerencia_turistico.xml
+++ b/app/src/main/res/layout/activity_descripcion_sugerencia_turistico.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                 xmlns:tools="http://schemas.android.com/tools"
-                                                 android:layout_width="match_parent"
-                                                 android:layout_height="match_parent"
-                                                 tools:context="com.hga.appturismo.activity.DescripcionSugerenciaActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.hga.appturismo.activity.DescripcionSugerenciaActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,13 +33,13 @@
                         android:layout_height="wrap_content"
                         android:text="Provincia:"
                         android:textColor="@color/colorPrimaryDark"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/textViewProvinciaText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text=""/>
+                        android:text="" />
 
                 </LinearLayout>
 
@@ -57,7 +57,7 @@
                         android:layout_weight="0.5"
                         android:text="Nombre: "
                         android:textColor="@color/colorPrimaryDark"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/textViewNombreText"
@@ -66,7 +66,7 @@
                         android:layout_weight="0.5"
                         android:text=""
                         android:textColor="@color/colorAccent"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -83,14 +83,14 @@
                         android:layout_weight="0.5"
                         android:text="Tipo de Turismo:"
                         android:textColor="@color/colorPrimaryDark"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/textViewTipoText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.5"
-                        android:text=""/>
+                        android:text="" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -105,49 +105,49 @@
                         android:padding="0dp"
                         android:scaleType="fitXY"
 
-                        app:layout_collapseMode="parallax"/>
+                        app:layout_collapseMode="parallax" />
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/descripcion_layout_sugerencia_descripcion"
+                    android:id="@+id/descripcion_layout_sugerencia"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/textViewDescripcion"
+                        android:id="@+id/labelDescripcion"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/label_descripcion"
                         android:textColor="@color/colorPrimaryDark"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/textViewDescipcionTextView"
+                        android:id="@+id/textViewDescipcion"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text=""/>
+                        android:text="" />
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/descripcion_layout_sugerencia_actividad"
+                    android:id="@+id/actividad_layout_sugerencia"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/labelActividad"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/label_actividad"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/textViewActividad"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/label_actividad"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:textStyle="bold"/>
-
-                    <TextView
-                        android:id="@+id/textViewActividadTextView"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text=""/>
+                        android:text="" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -162,13 +162,13 @@
                         android:layout_height="wrap_content"
                         android:text="Linea: "
                         android:textColor="@color/colorPrimaryDark"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/textViewLineaText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text=""/>
+                        android:text="" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -183,13 +183,13 @@
                         android:layout_height="wrap_content"
                         android:text="Fecha: "
                         android:textColor="@color/colorPrimaryDark"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/textViewFechaText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text=""/>
+                        android:text="" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -204,13 +204,13 @@
                         android:layout_height="wrap_content"
                         android:text="@string/text_direccion"
                         android:textColor="@color/colorPrimaryDark"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/textViewDireccionText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text=""/>
+                        android:text="" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -225,13 +225,13 @@
                         android:layout_height="wrap_content"
                         android:text="Teléfono: "
                         android:textColor="@color/colorPrimaryDark"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/textViewTelefonoText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text=""/>
+                        android:text="" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -246,13 +246,13 @@
                         android:layout_height="wrap_content"
                         android:text="Horarios de atención: "
                         android:textColor="@color/colorPrimaryDark"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/textViewHorariosTextLugar"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text=""/>
+                        android:text="" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -268,16 +268,16 @@
                         android:layout_height="wrap_content"
                         android:text="Registrado por:"
                         android:textColor="@color/colorPrimaryDark"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/textViewRegistradoPorText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text=""/>
+                        android:text="" />
                 </LinearLayout>
 
-                <include layout="@layout/content_button_sugerir_lugar"/>
+                <include layout="@layout/content_button_sugerir_lugar" />
             </LinearLayout>
 
         </ScrollView>
